syntax = "proto3";

package si.external_api_gateway;

message Context {
  string user_id = 1;
  string billing_account_id = 2;
  string organization_id = 3;
  string workspace_id = 4;
  string integration_instance_id = 5;
}
